# sciche

./: CMakeLists.txt  Makefile  Makefile.in  beautify.sh  configure  configure.sh  profile.sh
byte-code/: CMakeLists.txt
byte-code/src/: chunk.cpp  chunk.hpp  common.hpp.in  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  dictionary.cpp  dictionary.hpp  dictionary.hpp.in  dl.cpp  dl.hpp  log.hpp  members.dct  members.txt  object.cpp  object.hpp  primitive.cpp  primitive.hpp  scanner.cpp  scanner.hpp  table.cpp  table.hpp  value.cpp  value.hpp  vector.hpp  vm.cpp  vm.hpp
byte-code/src/objects/: obj.cpp  obj_bound_method.cpp  obj_class.cpp  obj_closure.cpp  obj_col.cpp  obj_complex.cpp  obj_cube.cpp  obj_function.cpp  obj_instance.cpp  obj_list.cpp  obj_map.cpp  obj_mat.cpp  obj_native.cpp  obj_native_class.cpp  obj_native_object.cpp  obj_row.cpp  obj_string.cpp  obj_thread.cpp  obj_upvalue.cpp
demo/sigpack/: sp_demo_102.lox  sp_demo_102.sc  sp_demo_103_2.sc  sp_demo_112.sc  spectrum.sc
json/: CMakeLists.txt  json.cpp  json.hpp  main.cpp
libs/io/: CMakeLists.txt  main.cpp  sndfile.cpp  sndfile.hpp  sndwav.cpp  sndwav.hpp
libs/json/: CMakeLists.txt  json.cpp  json.hpp  main.cpp
libs/math/: CMakeLists.txt  class_col.cpp  class_mat.cpp  main.cpp  mat.hpp
libs/sigpack/: CMakeLists.txt  delay.cpp  delay.hpp  fir.cpp  fir.hpp  gplot.cpp  gplot.hpp  iir.cpp  iir.hpp  kf.cpp  kf.hpp  main.cpp  sp.cpp  sp.hpp
libs/sigpack/sigpack-1.2.7/demo_c++/: sp_demo_103_1.cpp  sp_demo_111.cpp
libs/sigpack/sigpack-1.2.7/demo_matlab/: sp_test_102.cpp
libs/sigpack/sigpack-1.2.7/test/: test_spect.cpp
math/: CMakeLists.txt  main.cpp
mkhash/: Makefile  main.cc
nsl/: array.hpp  map.hpp  pmap.hpp  string.hpp  timer.hpp  vector.hpp
sciche/: CMakeLists.txt  main.cpp
sciche/byte-code/: chunk.cpp  chunk.hpp  common.hpp  common.hpp.in  compiler.cpp  debug.cpp  dl.cpp  dl.hpp  object.cpp  object.hpp  primitive.cpp  primitive.hpp  scanner.cpp  scanner.hpp  table.cpp  thread.hpp  vm.cpp  vm.hpp
sciche/sigpack/sigpack-1.2.7/demo_c++/: sp_demo_104_1.cpp  sp_demo_106_1.cpp
sciche/sigpack/sigpack-1.2.7/sigpack/filter/: filter.h
sciche/sigpack/sigpack-1.2.7/sigpack/parser/: parser.h
sciche/sigpack/sigpack-1.2.7/sigpack/timing/: timing.h
sciche/sigpack/sigpack-1.2.7/test/: test_gplot.cpp
scsa/: CMakeLists.txt
sigpack/: CMakeLists.txt  delay.hpp  fir.cpp  gplot.cpp  gplot.hpp  kf.cpp  kf.hpp  main.cpp  sp.cpp  sp.hpp
sigpack/sigpack-1.2.7/demo_c++/: sp_demo_102.cpp
sigpack/sigpack-1.2.7/sigpack/gplot/: gplot.h
sigpack/sigpack-1.2.7/sigpack/resampling/: resampling.h
sigpack/sigpack-1.2.7/sigpack/spectrum/: spectrum.h
sigpack/sigpack-1.2.7/sigpack/window/: window.h
src/: macros.h  main.cc  main.cpp  readline.cpp
src/byte-code/: chunk.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  object.cpp  object.hpp  primitive.cpp  scanner.cpp  scanner.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
src/compiler/: compiler.cc  compiler.h  scanner.cc  scanner.h  token.cc  token.h
src/sigpack/: delay.cpp  fir.cpp  fir.hpp  iir.cpp  iir.hpp  sp.cpp  sp.hpp
src/sigpack-1.2.7/demo_c++/: sp_demo_102.cpp  sp_demo_103_1.cpp  sp_demo_103_2.cpp  sp_demo_107_1.cpp  sp_demo_107_2.cpp  sp_demo_108_1.cpp  sp_demo_122.cpp
src/sigpack-1.2.7/demo_matlab/: sp_test_101.cpp
src/sigpack-1.2.7/sigpack/: sigpack.h
src/sigpack-1.2.7/sigpack/base/: base.h
src/sigpack-1.2.7/sigpack/fftw/: fftw.h
src/sigpack-1.2.7/sigpack/image/: image.h
src/sigpack-1.2.7/sigpack/kalman/: kalman.h
src/sigpack-1.2.7/test/: .test_adapt.cpp.un~  test_adapt.cpp  test_fft.cpp  test_image.cpp  test_spect.cpp  test_window.cpp
src/sigpack/sigpack-1.2.7/demo_c++/: sp_demo_101.cpp  sp_demo_112.cpp
src/sigpack/sigpack-1.2.7/sigpack/: sigpack.h
src/sigpack/sigpack-1.2.7/sigpack/kalman/: kalman.h
src/sigpack/sigpack-1.2.7/test/: test_filt.cpp
src/streamer/: console_streamer.cc  console_streamer.h  streamer.h
src/vm/: vm.cc  vm.h
test/dsp/ch4/: example-4.2.sc  example-4.8.sc
test/function/: println.lox
test/json/: json_to_string.sc  string_to_json.sc
test/list/: new.lox  subscript.lox
test/lox/class/: new.lox
test/lox/field/: get_on_bool.lox  get_on_num.lox
test/lox/for/: fun_in_body.lox
test/lox/if/: fun_in_else.lox  fun_in_then.lox
test/lox/limit/: no_reuse_constants.lox
test/lox/while/: fun_in_body.lox
test/sciche/math/: exponent.sc
test/sigpack/: sp_demo_101.lox  sp_demo_101.sc  sp_demo_102.lox  sp_demo_108_1.sc  sp_demo_111.sc
test/wren/benchmark/: binary_trees.py  binary_trees.wren  fib.py  fib.wren  fib.wren.txt  for.py  for.wren  map_string.py  map_string.wren  method_call.py  method_call.wren  string_equals.py  string_equals.wren
test/wren/core/bool/: to_string.wren
test/wren/core/list/: add.wren  add_all.wren  clear.wren  contains.wren  count.wren  each.wren  each_no_items.wren  each_non_function_arg.wren  filled.wren  filled_size_negative.wren  filled_size_not_int.wren  filled_size_not_num.wren  index_of.wren  insert.wren  insert_index_not_int.wren  insert_index_not_num.wren  insert_index_too_large.wren  insert_index_too_small.wren  new.wren  subscript_setter.wren
test/wren/core/map/: count.wren  new.wren
test/wren/core/null/: not.wren
test/wren/core/number/: abs.wren  acos.wren  asin.wren  atan.wren  cbrt.wren  ceil.wren  comparison.wren  cos.wren  divide.wren  equality.wren  exp.wren  floor.wren  fraction.wren  log.wren  log2.wren  minus.wren  mod.wren  not.wren  plus.wren  round.wren  sign.wren  sin.wren  sqrt.wren  tan.wren  truncate.wren
tool/: benchmark.py  mkdct.py  run-test.py
